<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg9"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btn_create_acc"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_design"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.143" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="404dp"
        android:layout_height="238dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="256dp"
            android:layout_height="54dp"
            android:background="@drawable/input_design"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/madison"
            android:textColorHint="@color/cyan_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="254dp"
            android:layout_height="61dp"
            android:background="@drawable/input_design"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/madison"
            android:textColorHint="@color/cyan_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_name"
            app:layout_constraintVertical_bias="0.185" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="255dp"
            android:layout_height="55dp"
            android:background="@drawable/input_design"
            android:hint="@string/Password"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/madison"
            android:textColorHint="@color/cyan_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>