<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg2">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="307dp"
          android:layout_height="462dp"
          android:layout_marginTop="16dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView2"
          app:layout_constraintVertical_bias="0.0"
          app:srcCompat="@drawable/whitebg" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/logo" />

      <EditText
          android:id="@+id/editTextTextEmailAddress2"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="62dp"
          android:layout_marginTop="60dp"
          android:layout_marginEnd="62dp"
          android:drawableStart="@drawable/ic_email"
          android:drawablePadding="12dp"
          android:ems="10"
          android:hint="E-mail"
          android:inputType="textEmailAddress"
          android:minHeight="48dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/imageView" />

      <EditText
          android:id="@+id/editTextTextPassword2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="62dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="62dp"
          android:drawableStart="@drawable/ic_lock"
          android:drawablePadding="12dp"
          android:ems="10"
          android:hint="@string/Password"
          android:inputType="textPassword"
          android:minHeight="48dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

      <Button
          android:id="@+id/btn_Login"
          android:layout_width="106dp"
          android:layout_height="41dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:background="@drawable/btn_design"
          android:text="@string/login"
          android:textColor="@color/white"
          android:textSize="20sp"
          app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
          app:layout_constraintTop_toBottomOf="@+id/alertTextLogin" />

      <com.google.android.gms.common.SignInButton
          android:id="@+id/sign_in_button"
          android:layout_width="284dp"
          android:layout_height="56dp"
          android:layout_marginTop="36dp"
          android:background="@drawable/btn_design2"
          android:drawableStart="@drawable/google"
          android:text="Continue with Google"
          android:textColor="#006693"
          android:textSize="15sp"
          app:layout_constraintEnd_toEndOf="@+id/imageView"
          app:layout_constraintHorizontal_bias="0.521"
          app:layout_constraintStart_toStartOf="@+id/imageView"
          app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

      <Button
          android:id="@+id/btn_signup"
          android:layout_width="75dp"
          android:layout_height="39dp"
          android:background="@drawable/btn_design2"
          android:text="@string/sign_up"
          android:textColor="#006693"
          android:textSize="8dp"
          app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
          app:layout_constraintEnd_toEndOf="@+id/imageView"
          app:layout_constraintHorizontal_bias="0.85"
          app:layout_constraintStart_toStartOf="@+id/sign_in_button"
          app:layout_constraintTop_toBottomOf="@+id/alertTextLogin"
          app:layout_constraintVertical_bias="0.327" />

      <Button
          android:id="@+id/button4"
          android:layout_width="73dp"
          android:layout_height="38dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="12dp"
          android:background="@drawable/btn_design2"
          android:text="@string/info"
          android:textColor="#006693"
          android:textSize="8dp"
          app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
          app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Need an account?"
          app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
          app:layout_constraintHorizontal_bias="0.491"
          app:layout_constraintStart_toStartOf="@+id/sign_in_button"
          app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=""
          app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
          app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress2"
          app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
          app:layout_constraintTop_toTopOf="@+id/imageView" />

      <TextView
          android:id="@+id/alertTextLogin"
          android:layout_width="274dp"
          android:layout_height="24dp"
          android:layout_marginTop="4dp"
          android:textColor="#DC143C"
          android:textSize="13dp"
          app:layout_constraintEnd_toEndOf="@+id/imageView"
          app:layout_constraintHorizontal_bias="0.484"
          app:layout_constraintStart_toStartOf="@+id/imageView"
          app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>


</RelativeLayout>
